fix(My Listings): #86 align sidebar

--- a/app/styles/management/user/_my-listings.scss
+++ b/app/styles/management/user/_my-listings.scss
@@ -8,6 +8,8 @@
     > * {
         display: table-cell;
         float: none;
+
+        vertical-align: top;
     }
 }
 
